--- a/0-/Clientlist.mediawiki
+++ b/0-/Clientlist.mediawiki
@@ -59,6 +59,7 @@ All current clients should be found here.
 {{ClientTableEntry|xmms2swi| Browser / Webclient | PHP | in development | Simple web interface, small and works well with ALL browsers! }}
 {{ClientTableEntry|xmms2-freedb| | C++ | in development | CD database client, updates cdda:// medialib entries}}
 {{ClientTableEntry|xmms2-hotkey| Hotkeys (X11/console) | C++ | stable | Control XMMS2 via X11 and/or console keys/mouse, supports multi-key combinations }}
+{{ClientTableEntry|xmms2-mpris-bridge| console / dbus | Python | in development | Provides a MPRIS interface for XMMS2 }}
 {{ClientTableEntry|xmms2-notify| Graphical / libnotify | C | in development | Provides desktop notifications }}
 {{ClientTableEntry|xmms2-osd| On-Screen Display / XOSD | Python | rewrite, in development | Simple song info on-screen display }}
 {{ClientTableEntry|xmms2-pidgin| Pidgin Plugin | C | mostly stable | Pidgin plugin to display current song }}
