--- a/0-/Client:Flexmms2.mediawiki
+++ b/0-/Client:Flexmms2.mediawiki
@@ -1,7 +1,7 @@
 {{Client|
 name=Flexmms2|
 author=Max Hollmann|
-version=[http://git.xmms.se/?p=flexmms2.git;a=snapshot;h=v0.1.0;sf=tgz 0.1.0]|
+version=[http://git.xmms.se/?p=flexmms2.git;a=snapshot;h=9045a8db7a48ef920bbd8d4f07c71c3957710255;sf=tgz 0.1.0]|
 website=http://nic-nac-project.org/~zank/xmms2/flexmms2/|
 devlanguage=Python|
 ui=GTK2|
