Levitation import of page 2511 rev 8805.

--- a/0-/XMMS2Con2010.mediawiki
+++ b/0-/XMMS2Con2010.mediawiki
@@ -83,4 +83,10 @@ The I am of course interested table is below:
 | No*
 | 0
 | *Can probably stay at a friend's, to be confirmed.
+|
+|-
+| Sebastian Noack
+| No
+| 0
+| Staying at Hotel Svensson, too ;)
 |}
