--- a/0-/Client:XMMS2-Scrobbler.mediawiki
+++ b/0-/Client:XMMS2-Scrobbler.mediawiki
@@ -1,1 +1,1 @@
-{{Client| name=XMMS2-Scrobbler| author=[[Tilman Sauerbeck]]| website=http://code-monkey.de/pages/xmms2-scrobbler| version=0.3.1| devlanguage=C| ui=None| screenshots=N/A| description=XMMS2-Scrobbler is an [http://www.audioscrobbler.com/ AudioScrobbler] client. Latest tarball available at ftp://ftp.code-monkey.de/pub/xmms2-scrobbler/xmms2-scrobbler-0.3.1.tar.gz}}
+{{Client| name=XMMS2-Scrobbler| author=[[Tilman Sauerbeck]]| website=http://code-monkey.de/pages/xmms2-scrobbler| version=0.4.0| devlanguage=C| ui=None| screenshots=N/A| description=XMMS2-Scrobbler is an [http://www.audioscrobbler.com/ AudioScrobbler] client. libre.fm is supported as well. Latest tarball available at ftp://ftp.code-monkey.de/pub/xmms2-scrobbler/xmms2-scrobbler-0.4.0.tar.gz}}
