--- a/0-/XMMS2Con2010.mediawiki
+++ b/0-/XMMS2Con2010.mediawiki
@@ -2,7 +2,7 @@
 It's time to hold the first XMMS2con in history! Yay. This page collects some ideas and facts about this conference. Everyone is welcome even if you are not a XMMS2 developer.
 
 == Where and when ==
-Where will be in MalmÃ¶ Sweden. Purple Scout have allowed us to use their offices to host the conference. We have big screen projector, nice beer fridges, lots of sofas and several different types of Rock Band, so it will fit us perfectly!
+It will be in MalmÃ¶ Sweden. Purple Scout have allowed us to use their offices to host the conference. We have big screen projector, nice beer fridges, lots of sofas and several different types of Rock Band, so it will fit us perfectly!
 
 '''The date will be February 19-21'''
 
