add the sudo command "sudo port install xmms2"
Levitation import of page 1114 rev 8827 (minor).

--- a/0-/Download XMMS2.mediawiki
+++ b/0-/Download XMMS2.mediawiki
@@ -77,7 +77,7 @@ Getting XMMS2 to build/run on Windows is mostly working, but not all features of
 
 ; MacPorts
 xmms2 is included in [http://www.macports.org MacPorts], however the port does not allow to customize the installation via variants at the moment. To include optional features, required libraries need to be installed beforehand. To install:
- port install xmms2
+ sudo port install xmms2
 
 
 To have more control over the feature-set, download the source and configure xmms2 manually:
