--- a/0-/Release:DrNo.mediawiki
+++ b/0-/Release:DrNo.mediawiki
@@ -29,6 +29,21 @@ Many bugs were fixed, and probably more introduced. See the full Changelog below
 
 
 === Notes to client authors ===
+* seek methods renamed to _abs/_rel, new seek with whence argument
+* c++ bindings doesn't need boost signal any more
+* A few renames in c api:
+** xmmsc_plugin_list -> xmmsc_main_list_plugins
+** xmmsc_mlib_path_import -> xmmsc_mlib_import_path.
+** xmmsc_configval_register -> xmmsc_config_register_value
+** xmmsc_configval_set -> xmmsc_config_set_value
+** xmmsc_configval_get -> xmmsc_config_get_value
+** xmmsc_configval_list -> xmmsc_config_list_values
+** xmmsc_broadcast_configval_changed -> xmmsc_broadcast_config_value_changed
+* More convinience methods in xmmsv, like: 
+** xmmsv_list_set_{string, int, coll}
+** xmmsv_list_insert_{string, int, coll}
+** xmmsv_list_append_{string, int, coll}
+** xmmsv_dict_set_{string, int, coll}
 
 === Notes to xform authors ===
 
