Added: Notes to packagers (libgme)
Levitation import of page 2521 rev 8829.

--- a/0-/Release:DrNo.mediawiki
+++ b/0-/Release:DrNo.mediawiki
@@ -47,6 +47,9 @@ Many bugs were fixed, and probably more introduced. See the full Changelog below
 
 === Notes to xform authors ===
 
+=== Notes to packagers ===
+* the gme plugin now depends on libgme (http://code.google.com/p/game-music-emu/)
+
 === Full ChangeLog ===
 ==== Between DrMattDestruction and TEST1 ====
 '''Anders Waldenborg'''
