Levitation import of page 2440 rev 8835.

--- a/0-/Client:kuechenstation.mediawiki
+++ b/0-/Client:kuechenstation.mediawiki
@@ -1,5 +1,6 @@
 {{Client
 |name=kuechenstation
+|image=Client-kuechenstation.png
 |author=Eike von Seggern
 |website=[http://kuechenstation.sourceforge.net/ kuechenstation.sf.net]
 |version=[http://sourceforge.net/projects/kuechenstation/files/kuechenstation/0.3-3/ 0.3-3] (developed with DrMattDestruction)
