/* Contributors and Hangarounds */
Levitation import of page 2176 rev 8840.

--- a/0-/About/People.mediawiki
+++ b/0-/About/People.mediawiki
@@ -28,5 +28,6 @@
 * [[SÃ©bastien Cevey]]
 * [[User:VxJasonxV | Jason Salaz]]
 * [[Johannes Heimansberg]]
+* [[Sebastian Noack]]
 
 [[Category:People]]
