--- a/0-/Release:DrNo.mediawiki
+++ b/0-/Release:DrNo.mediawiki
@@ -15,7 +15,7 @@ Upgrading should be smooth.
 
 ==== For users ====
 
-gamcli is deprecated, and will be replaced with nycli, in next release gamcli will be removed and the command "xmms2" will execute nycli, to get the behaviour with this release set the runnycli option in your config. The nycli "quit" alias now shuts down server, not nycli client (but if you already have a nycli config file you still have old behaviour).
+The old CLI is deprecated, and will be replaced with nycli, in next release the old CLI will be removed and the command "xmms2" will execute nycli, to get the behaviour with this release set the runnycli option in your config. The nycli "quit" alias now shuts down server, not nycli client (but if you already have a nycli config file you still have old behaviour). Please see [[MigrateToNyCLI]] for more information about nycli.
 
 ==== Bug fixes ====
 
