/* 2005-12-17 - Of Volvos and New Car Smell */
Levitation import of page 1326 rev 8855 (minor).

--- a/0-/IRC Quotes/2005.mediawiki
+++ b/0-/IRC Quotes/2005.mediawiki
@@ -3,7 +3,7 @@ Quotes from 2005
 === 2005-12-27 - orphans knows murphy ===
  15:19 <orphans> that should (and by should i mean probably wont) work
 
-=== 2005-12-17 - Of Volvos and New Car Smell ===
+=== 2005-12-17 - Of Volvos and New Car Smell [http://xkcd.com/671/] ===
  17:59:04 <juhovh> so then we had just volvos and right now a toyota and a suzuki
  17:59:21 <Legoguy> oh my, i just remembered, i never had lunch, and its almost dinner time :/
  17:59:21 <juhovh> oh there was a nissan in the middle
